objects/Account.object
<CustomObject>
    <fields>
        <fullName>EssenAccountExtID__c</fullName>
        <externalId>true</externalId>
        <label>EssenAccountExtID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConflictField__c</fullName>
        <label>ConflictField</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InFieldError__c</fullName>
        <description>testing Salesforce error &quot;In-Field&quot; with profile deployment</description>
        <label>InFieldError</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Essentialstesting__c</fullName>
        <label>Essentialstesting</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GithubTest__c</fullName>
        <description>Hey yo</description>
        <label>GithubTest1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>back_deploy_test__c</fullName>
        <description>testing back deploying created user story from prod</description>
        <label>back deploy test</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>